[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "nano-vllm"
version = "0.2.0"
authors = [{ name = "Xingkai Yu" }]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
description = "a lightweight vLLM implementation built from scratch"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch==2.8.0",
    "triton>=3.0.0",
    "transformers>=4.51.0",
    "flash-attn",
    "xxhash",
]

[project.urls]
Homepage="https://github.com/GeeeekExplorer/nano-vllm"

[tool.setuptools.packages.find]
where = ["."]
include = ["nanovllm*"]

[tool.uv]
# flash-attn imports torch in setup.py, so it must build in the project env (not an isolated one)
no-build-isolation-package = ["flash-attn"]

# Pull torch and all its nvidia-* runtime libs from PyTorch's cu126 index so the
# versions are mutually consistent (torch wheel was linked against these exact libs).
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
nvidia-cublas-cu12 = { index = "pytorch-cu126" }
nvidia-cuda-cupti-cu12 = { index = "pytorch-cu126" }
nvidia-cuda-nvrtc-cu12 = { index = "pytorch-cu126" }
nvidia-cuda-runtime-cu12 = { index = "pytorch-cu126" }
nvidia-cudnn-cu12 = { index = "pytorch-cu126" }
nvidia-cufft-cu12 = { index = "pytorch-cu126" }
nvidia-cufile-cu12 = { index = "pytorch-cu126" }
nvidia-curand-cu12 = { index = "pytorch-cu126" }
nvidia-cusolver-cu12 = { index = "pytorch-cu126" }
nvidia-cusparse-cu12 = { index = "pytorch-cu126" }
nvidia-cusparselt-cu12 = { index = "pytorch-cu126" }
nvidia-nccl-cu12 = { index = "pytorch-cu126" }
nvidia-nvjitlink-cu12 = { index = "pytorch-cu126" }
nvidia-nvtx-cu12 = { index = "pytorch-cu126" }
triton = { index = "pytorch-cu126" }
